[gd_scene load_steps=3 format=2]

[ext_resource path="res://musiq_game/ui/MusiQTheme.tres" type="Theme" id=1]
[ext_resource path="res://musiq_game/ui/dialogs/MusiQPlayerDeviceSelectionDialog.gd" type="Script" id=2]

[node name="MusiQPlayerDeviceSelectionDialog" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -263.0
margin_top = -125.0
margin_right = 263.0
margin_bottom = 190.0
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -11.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 486.0
margin_bottom = 42.0
text = "Connect to a device"
align = 1
valign = 1

[node name="DeviceListScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 486.0
margin_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeviceListContainer" type="VBoxContainer" parent="VBoxContainer/DeviceListScrollContainer"]
margin_right = 486.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 264.0
margin_right = 486.0
margin_bottom = 306.0

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 190.0
margin_bottom = 42.0
text = "Cancel (End Game)"

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 193.0
margin_right = 394.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="RefreshButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 397.0
margin_right = 486.0
margin_bottom = 42.0
text = "Refresh"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
